@@ -13,6 +13,7 @@
 - Fixed division by zero because backend_ctx->hardware_power_all was not re-inserted after refactoring device_param->hardware_power
 - Fixed invalid progress counter initialization in attack-mode 9 when using --skip or --restore
 - Fixed out-of-boundary reads in attack-mode 9 that were caused by a missing work item limit in the refactored autotune engine
+- Fixed strategy for eliminating hashes with zero length in LM when multiple hashes contain a zero hash
 
 ##
 ## Technical
